# organizar-downloads

./: .gitignore  README.md  pyproject.toml
config/: extension_map.yaml
legado/: OrganizarDownloads.py
src/organizador_downloads/: __init__.py  cli.py  config_loader.py  file_ops.py  models.py  organizer.py  reporting.py
tests/: test_config_loader.py  test_file_ops.py  test_organizer_integration.py
